@startuml
class Decompress_a_file {
    h
    inFile
    outFile
    main()
}
class HuffmanDecompress {
    MAX_INPUT_BUFFER
    SIZE
    c
    codeChar
    codeMap
    digest
    fIn
    header
    i
    inFileName
    input
    inputPipe
    j
    md
    objIn
    outFileName
    output
    window
    fillQueue()
    getBits()
    getDigest()
    getHashAlgorithm()
    openFile()
    readHuffHeader()
    write()
}


Decompress_a_file *--> HuffmanDecompress
HuffmanDecompress *--> HuffmanHeader : header
HuffmanDecompress *--> MessageDigest

center footer Generated by GitUml www.gituml.com
hide empty members

@enduml
